fixup! add header titles & image

--- a/assets/basic/configuration.json
+++ b/assets/basic/configuration.json
@@ -1,6 +1,7 @@
 ---
 ---
 {
+  "headerTitle": "Basic UICX",
   "baseURL": "{{ "/assets/basic/" | absolute_url }}",
   "webviewBaseURL": "{{ ",/assets/basic/" | absolute_url }}",
   "deeplinks": {
