--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
     "expo-constants": "~17.0.8",
-    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "handlebars": "^4.7.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
